# serializer version: 1
# name: TestClassificationOutputs.test_rf_classifier_empirical_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |     none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|---------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 | 0.494737 |            0.124908 |           0.128019 |            0.128019 |           0.124317 |
      |  2 |            2 | 0.494737 |            0.060093 |           0.087229 |            0.179024 |           0.178917 |
      |  3 |            3 | 0.494737 |            0.150012 |          -0.054326 |            0.190114 |           0.189463 |
      |  4 |            4 | 0.494737 |           -0.164268 |           0.029581 |           -0.180282 |          -0.179768 |
      |  5 |            5 | 0.494737 |           -0.083926 |          -0.137307 |           -0.136939 |          -0.136566 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|-------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  2 |            2 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  3 |            3 |      0 |                   0 |                 -0 |                   0 |                  0 |
      |  4 |            4 |      0 |                  -0 |                  0 |                  -0 |                 -0 |
      |  5 |            5 |      0 |                  -0 |                 -0 |                  -0 |                 -0 |
    ''',
  })
# ---
# name: TestClassificationOutputs.test_rf_classifier_gaussian_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |     none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|---------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 | 0.494737 |            0.119294 |           0.078886 |            0.153729 |           0.153354 |
      |  2 |            2 | 0.494737 |            0.033418 |           0.140727 |            0.165512 |           0.165607 |
      |  3 |            3 | 0.494737 |            0.111268 |          -0.017562 |            0.190573 |           0.190983 |
      |  4 |            4 | 0.494737 |           -0.134909 |           0.023524 |           -0.193154 |          -0.190198 |
      |  5 |            5 | 0.494737 |           -0.069378 |          -0.106102 |           -0.163007 |          -0.15625  |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|-------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  2 |            2 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  3 |            3 |      0 |                   0 |                 -0 |                   0 |                  0 |
      |  4 |            4 |      0 |                  -0 |                  0 |                  -0 |                 -0 |
      |  5 |            5 |      0 |                  -0 |                 -0 |                  -0 |                 -0 |
    ''',
  })
# ---
# name: TestClassificationOutputs.test_rf_classifier_independence_basic
  dict({
    'shapley_values_est': '''
      |    |   explain_id |     none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|---------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 | 0.494737 |            0.008175 |           0.017123 |            0.245333 |           0.234632 |
      |  2 |            2 | 0.494737 |            0.001474 |           0.023    |            0.243632 |           0.237158 |
      |  3 |            3 | 0.494737 |            0.010842 |          -0.009368 |            0.244491 |           0.229298 |
      |  4 |            4 | 0.494737 |           -0.013298 |          -0.005246 |           -0.243211 |          -0.232982 |
      |  5 |            5 | 0.494737 |           -0.007035 |          -0.019509 |           -0.240632 |          -0.227561 |
    ''',
    'shapley_values_sd': '''
      |    |   explain_id |   none |   sepal length (cm) |   sepal width (cm) |   petal length (cm) |   petal width (cm) |
      |---:|-------------:|-------:|--------------------:|-------------------:|--------------------:|-------------------:|
      |  1 |            1 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  2 |            2 |      0 |                   0 |                  0 |                   0 |                  0 |
      |  3 |            3 |      0 |                   0 |                 -0 |                   0 |                  0 |
      |  4 |            4 |      0 |                  -0 |                 -0 |                  -0 |                 -0 |
      |  5 |            5 |      0 |                  -0 |                 -0 |                  -0 |                 -0 |
    ''',
  })
# ---
